--- a/packages/react-dynamic-app/package.json
+++ b/packages/react-dynamic-app/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "devDependencies": {
+    "archiver": "^3.1.1",
     "customize-cra": "^0.8.0",
     "react-app-rewired": "^2.1.3"
   }
