--- a/packages/react-dynamic-app/package.json
+++ b/packages/react-dynamic-app/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "../microfrontend-controller/bin/index.js build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
