--- a/packages/react-dynamic-app/package.json
+++ b/packages/react-dynamic-app/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "../microfrontend-controller/bin/index.js build",
+    "build": "microfrontend-controller build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
@@ -31,6 +31,7 @@
   "devDependencies": {
     "archiver": "^3.1.1",
     "customize-cra": "^0.8.0",
-    "react-app-rewired": "^2.1.3"
+    "react-app-rewired": "^2.1.3",
+    "microfrontend-controller": "*"
   }
 }
