--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -8,7 +8,7 @@
     "react-helmet": "^5.2.1",
     "react-scripts": "3.2.0",
     "microfrontend-controller": "*",
-    "react-controller": "*"
+    "react-microfrontend": "*"
   },
   "scripts": {
     "start": "microfrontend-controller start",
