--- a/packages/react-dynamic-app/package.json
+++ b/packages/react-dynamic-app/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-microfrontend": "*"
   },
   "scripts": {
     "start": "IS_MICROFRONTEND=true microfrontend-controller start",
