--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -62,6 +62,7 @@
     "dist"
   ],
   "dependencies": {
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.1.2"
   }
 }
