--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,8 @@
     "start-all": "microfrontend-controller start-all"
   },
   "dependencies": {
-    "microfrontend-controller": "link:../packages/microfrontend-controller"
+    "microfrontend-controller": "1.0.0",
+    "lerna": "^3.16.4",
+    "react-microfrontend": "1.0.0"
   }
 }
