--- a/example/packages/react-another-micro-app/package.json
+++ b/example/packages/react-another-micro-app/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "react-microfrontend": "link:../packages/react-microfrontend"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "IS_MICROFRONTEND=true microfrontend-controller start",
@@ -30,11 +29,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "archiver": "^3.1.1",
-    "customize-cra": "^0.8.0",
-    "react-app-rewired": "^2.1.3",
-    "microfrontend-controller": "link:../packages/microfrontend-controller"
   }
 }
