--- a/example/packages/react-app/package.json
+++ b/example/packages/react-app/package.json
@@ -6,14 +6,12 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
-    "react-scripts": "3.2.0",
-    "react-microfrontend": "link:../packages/react-microfrontend",
-    "microfrontend-controller": "link:../packages/microfrontend-controller"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "microfrontend-controller start",
     "start-standalone": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "microfrontend-controller build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
