--- a/example/packages/react-dynamic-app/package.json
+++ b/example/packages/react-dynamic-app/package.json
@@ -6,7 +6,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
-    "react-microfrontend": "link:../packages/react-microfrontend"
+    "react-microfrontend": "1.0.0"
   },
   "scripts": {
     "start": "IS_MICROFRONTEND=true microfrontend-controller start",
@@ -35,6 +35,6 @@
     "archiver": "^3.1.1",
     "customize-cra": "^0.8.0",
     "react-app-rewired": "^2.1.3",
-    "microfrontend-controller": "link:../packages/microfrontend-controller"
+    "microfrontend-controller": "1.0.0"
   }
 }
