--- a/example/package.json
+++ b/example/package.json
@@ -8,8 +8,7 @@
     "start-all": "microfrontend-controller start-all"
   },
   "dependencies": {
-    "microfrontend-controller": "1.0.0",
-    "lerna": "^3.16.4",
-    "react-microfrontend": "1.0.0"
+    "microfrontend-controller": "1.2.1",
+    "lerna": "^3.16.4"
   }
 }
