--- a/example/packages/react-dynamic-app/package.json
+++ b/example/packages/react-dynamic-app/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "react-microfrontend": "1.0.0"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "IS_MICROFRONTEND=true microfrontend-controller start",
@@ -35,6 +34,6 @@
     "archiver": "^3.1.1",
     "customize-cra": "^0.8.0",
     "react-app-rewired": "^2.1.3",
-    "microfrontend-controller": "1.0.0"
+    "microfrontend-controller": "*"
   }
 }
