--- a/example/lerna.json
+++ b/example/lerna.json
@@ -1,7 +1,8 @@
 {
   "packages": [
     "packages/*",
-    "../packages/*"
+    "../packages/react-microfrontend",
+    "../packages/microfrontend-controller"
   ],
   "version": "independent",
   "npmClient": "yarn"
