--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
     "start-all": "microfrontend-controller start-all"
   },
   "dependencies": {
-    "microfrontend-controller": "1.2.1",
-    "lerna": "^3.16.4"
+    "microfrontend-controller": "*",
+    "lerna": "^3.16.4",
+    "react-microfrontend": "*"
   }
 }
