--- a/example/packages/react-dynamic-app/package.json
+++ b/example/packages/react-dynamic-app/package.json
@@ -33,7 +33,6 @@
   "devDependencies": {
     "archiver": "^3.1.1",
     "customize-cra": "^0.8.0",
-    "react-app-rewired": "^2.1.3",
-    "microfrontend-controller": "*"
+    "react-app-rewired": "^2.1.3"
   }
 }
