--- a/example/packages/react-market-cart/package.json
+++ b/example/packages/react-market-cart/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "react-another-micro-app",
+  "name": "react-market-cart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "@types/jest": "24.0.21",
+    "@types/node": "12.12.5",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.3",
+    "microfrontend-controller": "^1.2.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-scripts": "3.2.0",
+    "typescript": "3.6.4"
   },
   "scripts": {
     "start": "IS_MICROFRONTEND=true microfrontend-controller start",
     "start-standalone": "microfrontend-controller start",
     "build": "IS_MICROFRONTEND=true microfrontend-controller build",
     "build-standalone": "microfrontend-controller build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
