--- a/example/packages/react-market-cart/package.json
+++ b/example/packages/react-market-cart/package.json
@@ -11,7 +11,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "typescript": "3.6.4"
+    "typescript": "3.6.4",
+    "react-market-base": "*"
   },
   "scripts": {
     "start": "IS_MICROFRONTEND=true microfrontend-controller start",
