--- a/example/packages/react-app/package.json
+++ b/example/packages/react-app/package.json
@@ -9,9 +9,9 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "microfrontend-controller start",
+    "start": "REACT_APP_MY_COOL_ENV_TITLE=envTitle microfrontend-controller start",
     "start-standalone": "react-scripts start",
-    "build": "microfrontend-controller build",
+    "build": "REACT_APP_MY_COOL_ENV_TITLE=envTitle microfrontend-controller build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
