--- a/example/packages/react-dynamic-app/package.json
+++ b/example/packages/react-dynamic-app/package.json
@@ -8,9 +8,9 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "IS_MICROFRONTEND=true microfrontend-controller start",
+    "start": "REACT_APP_MY_COOL_ENV=envValue IS_MICROFRONTEND=true microfrontend-controller start",
     "start-standalone": "microfrontend-controller start",
-    "build": "IS_MICROFRONTEND=true microfrontend-controller build",
+    "build": "REACT_APP_MY_COOL_ENV=envValue IS_MICROFRONTEND=true microfrontend-controller build",
     "build-standalone": "microfrontend-controller build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
