Added initial comunication btween react marker card and list

--- a/examples/market/packages/react-market-cart/package.json
+++ b/examples/market/packages/react-market-cart/package.json
@@ -11,8 +11,8 @@
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "typescript": "3.7.2",
-    "react-microfrontend": "*",
-    "microfrontend-controller": "*"
+    "react-microfrontend": "file:../../../../packages/react-microfrontend",
+    "microfrontend-controller": "file:../../../../packages/microfrontend-controller"
   },
   "scripts": {
     "start": "IS_MICROFRONTEND=true microfrontend-controller start",
