--- a/examples/market/packages/react-market-cart/tsconfig.json
+++ b/examples/market/packages/react-market-cart/tsconfig.json
@@ -7,10 +7,11 @@
       "esnext"
     ],
     "allowJs": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
