--- a/examples/market/packages/react-market-list/tsconfig.json
+++ b/examples/market/packages/react-market-list/tsconfig.json
@@ -7,10 +7,10 @@
       "esnext"
     ],
     "allowJs": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": false,
+    "strict": true,
     "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
