--- a/examples/simple/packages/react-another-micro-app/package.json
+++ b/examples/simple/packages/react-another-micro-app/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-microfrontend": "^1.5.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
@@ -30,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "microfrontend-controller": "^1.3.4"
   }
 }
