--- a/examples/simple/packages/react-app/package.json
+++ b/examples/simple/packages/react-app/package.json
@@ -7,6 +7,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
+    "react-microfrontend": "^1.5.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
@@ -30,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "microfrontend-controller": "^1.3.4"
   }
 }
