--- a/examples/simple/packages/react-dynamic-app/package.json
+++ b/examples/simple/packages/react-dynamic-app/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-microfrontend": "^1.5.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
@@ -34,6 +35,7 @@
   "devDependencies": {
     "archiver": "^3.1.1",
     "customize-cra": "^0.8.0",
+    "microfrontend-controller": "^1.3.4",
     "react-app-rewired": "^2.1.3"
   }
 }
