--- a/packages/microfrontend-controller/package.json
+++ b/packages/microfrontend-controller/package.json
@@ -14,6 +14,7 @@
     "fs-extra": "^8.1.0",
     "react-app-rewired": "^2.1.4",
     "react-scripts": "^3.2.0",
+    "semver": "^6.3.0",
     "sw-precache": "^5.2.1",
     "uglify-js": "^3.6.7"
   }
