--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -13,7 +13,7 @@
     "npm": ">=5"
   },
   "scripts": {
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test": "cross-env CI=true react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "build": "rollup -c",
     "start": "rollup -c -w",
@@ -27,8 +27,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.0",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.7.0",
     "@babel/preset-react": "^7.7.0",
     "@babel/preset-stage-0": "^7.0.0",
