--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
   directories:
     - "node_modules"
 before_script:
-  - yarn run lerna run prepublish
+  - yarn lerna-boostrap
 deploy:
   provider: script
   script: "yarn run lerna:publish"
