--- a/packages/microfrontend-controller/package.json
+++ b/packages/microfrontend-controller/package.json
@@ -10,7 +10,10 @@
     "microfrontend-controller": "./bin/index.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "customize-cra": "^0.8.0",
+    "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "fs-extra": "^8.1.0",
     "react-app-rewired": "^2.1.4",
     "react-scripts": "^3.2.0",
