--- a/examples/simple/lerna.json
+++ b/examples/simple/lerna.json
@@ -1,8 +1,6 @@
 {
   "packages": [
-    "packages/*",
-    "../packages/react-microfrontend",
-    "../packages/microfrontend-controller"
+    "packages/*"
   ],
   "version": "independent",
   "npmClient": "yarn"
