--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -8,8 +8,6 @@
     "start-all": "microfrontend-controller start-all"
   },
   "dependencies": {
-    "microfrontend-controller": "*",
-    "lerna": "^3.16.4",
-    "react-microfrontend": "*"
+    "lerna": "^3.16.4"
   }
 }
