--- a/examples/simple/packages/calculator/package.json
+++ b/examples/simple/packages/calculator/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "react-dynamic-app",
+  "name": "calculator",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
+  "main": "./src/lib/index.js",
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-microfrontend": "^1.5.2",
+    "react-microfrontend": "1.7.0",
     "react-scripts": "3.3.0"
   },
   "scripts": {
@@ -35,7 +36,7 @@
   "devDependencies": {
     "archiver": "^3.1.1",
     "customize-cra": "^0.8.0",
-    "microfrontend-controller": "^1.3.4",
+    "microfrontend-controller": "1.5.1",
     "react-app-rewired": "^2.1.3"
   }
 }
