--- a/examples/simple/packages/webapp/package.json
+++ b/examples/simple/packages/webapp/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "react-another-micro-app",
+  "name": "webapp",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-microfrontend": "^1.5.2",
+    "react-helmet": "^5.2.1",
+    "react-microfrontend": "1.7.0",
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "start": "IS_MICROFRONTEND=true microfrontend-controller start",
-    "start-standalone": "microfrontend-controller start",
-    "build": "IS_MICROFRONTEND=true microfrontend-controller build",
-    "build-standalone": "microfrontend-controller build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "start": "REACT_APP_MY_COOL_ENV_TITLE=envTitle microfrontend-controller start",
+    "start-standalone": "react-scripts start",
+    "build": "REACT_APP_MY_COOL_ENV_TITLE=envTitle microfrontend-controller build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,6 +33,6 @@
     ]
   },
   "devDependencies": {
-    "microfrontend-controller": "^1.3.4"
+    "microfrontend-controller": "1.5.1"
   }
 }
