--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -64,6 +64,8 @@
   "dependencies": {
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0"
   }
 }
