--- a/examples/simple/packages/calculator/package.json
+++ b/examples/simple/packages/calculator/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
-  "main": "./src/lib-refact/index.js",
+  "main": "./src/lib/public.js",
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
