--- a/examples/simple/packages/clock/package.json
+++ b/examples/simple/packages/clock/package.json
@@ -2,7 +2,7 @@
   "name": "clock",
   "version": "0.1.0",
   "private": true,
-  "main": "./src/lib/public.js",
+  "main": "./build-lib/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "build": "microfrontend-controller build",
-    "start": "microfrontend-controller start"
+    "start": "microfrontend-controller start",
+    "build-lib": "microfrontend-controller build-lib ./src/lib/schema.js"
   },
   "eslintConfig": {
     "extends": "react-app"
