--- a/examples/market/packages/cart/tsconfig.json
+++ b/examples/market/packages/cart/tsconfig.json
@@ -19,7 +19,8 @@
     "noEmit": true,
     "jsx": "react",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "baseUrl": "./src"
   },
   "include": [
     "src"
