--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "lerna": "^3.19.0"
   },
   "scripts": {
     "test": "lerna run test",
     "lerna-bootstrap": "lerna bootstrap"
+  },
+  "dependencies": {
+    "eslint-import-resolver-lerna": "^1.1.0"
   }
 }
