--- a/packages/microfrontend-controller/package.json
+++ b/packages/microfrontend-controller/package.json
@@ -17,6 +17,8 @@
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "fs-extra": "^8.1.0",
+    "listr": "^0.14.3",
+    "ora": "^4.0.3",
     "react-app-rewired": "^2.1.4",
     "react-scripts": "^3.3.0",
     "semver": "^6.3.0",
