--- a/examples/market/package.json
+++ b/examples/market/package.json
@@ -9,6 +9,6 @@
   },
   "scripts": {
     "build": "microfrontend-controller build-all",
-    "start": "microfrontend-controller start -l @market/webapp"
+    "start": "microfrontend-controller start -a @market/webapp"
   }
 }
