--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -1,13 +1,17 @@
 {
   "name": "react-microfrontend",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "description": "",
   "author": "",
   "license": "MIT",
   "repository": "/react-microfrontend",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=8",
     "npm": ">=5"
@@ -25,14 +29,7 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-external-helpers": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-stage-0": "^7.0.0",
     "@svgr/rollup": "^5.0.1",
-    "babel-eslint": "^10.0.3",
     "cross-env": "^6.0.3",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.0.1",
@@ -48,16 +45,14 @@
     "gh-pages": "^2.1.1",
     "react-scripts": "^3.3.0",
     "rollup": "^1.27.14",
-    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-url": "^3.0.1"
+    "rollup-plugin-typescript2": "^0.25.3",
+    "rollup-plugin-url": "^3.0.1",
+    "typescript": "^3.7.4"
   },
-  "files": [
-    "dist"
-  ],
   "dependencies": {
     "react-helmet": "^5.2.1",
     "react-redux": "^7.1.3",
