--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -22,7 +22,8 @@
     "build": "rollup -c",
     "start": "rollup -c -w",
     "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "prepare": "install-peers"
   },
   "peerDependencies": {
     "react": "^16.12.0",
@@ -30,6 +31,8 @@
   },
   "devDependencies": {
     "@svgr/rollup": "^5.0.1",
+    "@types/react": "^16.9.17",
+    "@types/react-router-dom": "^5.1.3",
     "cross-env": "^6.0.3",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.0.1",
@@ -43,6 +46,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.1.1",
+    "install-peers-cli": "^2.2.0",
     "react-scripts": "^3.3.0",
     "rollup": "^1.27.14",
     "rollup-plugin-commonjs": "^10.1.0",
