--- a/examples/simple/packages/calculator/package.json
+++ b/examples/simple/packages/calculator/package.json
@@ -38,7 +38,6 @@
   "devDependencies": {
     "archiver": "^3.1.1",
     "customize-cra": "^0.8.0",
-    "microfrontend-controller": "1.5.1",
-    "react-app-rewired": "^2.1.3"
+    "microfrontend-controller": "1.5.1"
   }
 }
