--- a/packages/microfrontend-controller/package.json
+++ b/packages/microfrontend-controller/package.json
@@ -9,6 +9,9 @@
   "bin": {
     "microfrontend-controller": "./bin/index.js"
   },
+  "optionalDependencies": {
+    "node-sass": "^4.13.0"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "chalk": "^3.0.0",
@@ -16,11 +19,9 @@
     "customize-cra": "^0.8.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
-    "fs-extra": "^8.1.0",
-    "listr": "^0.14.3",
     "ora": "^4.0.3",
-    "react-app-rewired": "^2.1.4",
-    "react-scripts": "^3.3.0",
+    "react-app-rewired": "^2.1.5",
+    "react-scripts": "^3.2.0",
     "semver": "^6.3.0",
     "sw-precache": "^5.2.1",
     "uglify-js": "^3.6.7"
