--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -21,8 +21,8 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": ">=16.12.0",
+    "react-dom": ">=16.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
