--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
   "packages": [
-    "packages/react-microfrontend",
-    "packages/microfrontend-controller"
+    "packages/*"
   ],
   "version": "independent",
   "command": {
