--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -18,7 +18,8 @@
     "build": "rollup -c",
     "start": "rollup -c -w",
     "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "prepare": "yarn run build"
   },
   "peerDependencies": {
     "react": ">=16.12.0",
