--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "./src/run.js",
+    "test": "./src/run.js",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
