--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -26,13 +26,8 @@
     "react-dom": ">=16.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-external-helpers": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-stage-0": "^7.0.0",
     "@svgr/rollup": "^5.0.1",
+    "@types/react": "^16.9.19",
     "babel-eslint": "^10.0.3",
     "cross-env": "^6.0.3",
     "eslint": "6.8.0",
@@ -47,14 +42,18 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-scripts": "^3.3.0",
     "rollup": "^1.27.14",
-    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-url": "^3.0.1"
+    "rollup-plugin-typescript2": "^0.25.3",
+    "rollup-plugin-url": "^3.0.1",
+    "typescript": "^3.7.5"
   },
   "files": [
     "dist"
