--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -8,6 +8,10 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=8",
     "npm": ">=5"
@@ -55,9 +59,6 @@
     "rollup-plugin-url": "^3.0.1",
     "typescript": "^3.7.5"
   },
-  "files": [
-    "dist"
-  ],
   "dependencies": {
     "react-helmet": "^5.2.1",
     "react-redux": "^7.1.3",
