--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -31,14 +31,15 @@
   },
   "devDependencies": {
     "@svgr/rollup": "^5.0.1",
+    "@types/jest": "^25.1.3",
     "@types/react": "^16.9.19",
     "cross-env": "^6.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.3.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "rollup": "^1.27.14",
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-cleanup": "^3.1.1",
