--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@svgr/rollup": "^5.0.1",
+    "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.1.3",
     "@types/react": "^16.9.19",
     "cross-env": "^6.0.3",
