Added initial mocked action

--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -24,7 +24,8 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build",
     "prepare": "yarn run build",
-    "validate": "yarn test && yarn build"
+    "validate": "yarn test && yarn build",
+    "print": "echo \"Printiing \""
   },
   "peerDependencies": {
     "react": ">=16.12.0",
