Removed helper script

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "scripts": {
     "test": "lerna run --stream --concurrency=1 test",
     "postinstall": "yarn lerna-bootstrap",
-    "lerna-bootstrap": "lerna bootstrap",
-    "validate:react-microfrontend": "lerna run --scope react-microfrontend validate --stream "
+    "lerna-bootstrap": "lerna bootstrap"
   },
   "dependencies": {
     "eslint-import-resolver-lerna": "^1.1.0"
