--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -24,8 +24,7 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build",
     "prepare": "yarn run build",
-    "validate": "yarn test && yarn build",
-    "print": "echo \"Printiing \""
+    "validate": "yarn test && yarn build"
   },
   "peerDependencies": {
     "react": ">=16.12.0",
