--- a/packages/react-microfrontend/tsconfig.json
+++ b/packages/react-microfrontend/tsconfig.json
@@ -3,12 +3,7 @@
     "outDir": "dist",
     "module": "esnext",
     "target": "es5",
-    "lib": [
-      "es6",
-      "dom",
-      "es2016",
-      "es2017"
-    ],
+    "lib": ["es6", "dom", "es2016", "es2017"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
@@ -24,11 +19,9 @@
     "noEmit": true,
     "noImplicitAny": false
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "baseUrl": "./src" /* Base directory to resolve non-absolute module names. */,
+  "paths": {
+    "src/*": ["src/*"]
+  },
+  "exclude": ["node_modules", "dist"]
 }
