--- a/packages/microfrontend-controller/package.json
+++ b/packages/microfrontend-controller/package.json
@@ -19,6 +19,7 @@
     "customize-cra": "^0.8.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
+    "gh-pages": "^2.2.0",
     "ora": "^4.0.3",
     "react-app-rewired": "^2.1.5",
     "react-scripts": "^3.2.0",
