--- a/examples/store/packages/webapp/package.json
+++ b/examples/store/packages/webapp/package.json
@@ -10,8 +10,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-microfrontend": "^2.1.2",
-    "react-scripts": "3.3.1",
-    "orders": "*"
+    "react-scripts": "3.3.1"
   },
   "scripts": {
     "start": "microfrontend-controller start",
