--- a/examples/store/packages/promotion/package.json
+++ b/examples/store/packages/promotion/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-microfrontend": "^2.1.3",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "showcase": "*"
   },
   "scripts": {
     "start": "microfrontend-controller start",
