--- a/examples/store/packages/showcase/package.json
+++ b/examples/store/packages/showcase/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.13.1",
     "react-microfrontend": "^2.1.3",
     "react-scripts": "3.4.1",
-    "cart": "*"
+    "cart": "*",
+    "design-system": "*"
   },
   "scripts": {
     "start": "microfrontend-controller start",
