--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lerna-bootstrap": "lerna bootstrap"
   },
   "dependencies": {
-    "eslint-import-resolver-lerna": "^1.1.0"
+    "dotenv": "^8.2.0",
+    "eslint-import-resolver-lerna": "^1.1.0",
+    "gh-pages": "^2.2.0"
   }
 }
