--- a/packages/marketplace-frontend/package.json
+++ b/packages/marketplace-frontend/package.json
@@ -18,6 +18,7 @@
     "axios-hooks": "^1.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^2.7.0",
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
