--- a/packages/marketplace-frontend/package.json
+++ b/packages/marketplace-frontend/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.2.5",
     "axios": "^0.19.2",
     "axios-hooks": "^1.9.0",
+    "firebase": "^7.14.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
