--- a/packages/marketplace-frontend/package.json
+++ b/packages/marketplace-frontend/package.json
@@ -19,6 +19,7 @@
     "firebase": "^7.14.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-ga": "^2.7.0",
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
