--- a/packages/marketplace-backend/package.json
+++ b/packages/marketplace-backend/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "microfrontend-marketplace",
+  "name": "@cmra/server",
   "version": "1.0.0",
   "description": "",
+  "main": "./lib/index.js",
   "scripts": {
     "prepare": "npm run build",
     "pretest": "npm run build",
     "posttest": "npm run lint",
     "test": "echo 'pass'",
     "lint": "tslint -p .",
-    "start": "NODE_PATH=./dist node ./dist/index.js",
-    "start:watch": "npm run build:watch & NODE_PATH=./dist nodemon ./dist/index.js",
+    "start": "NODE_PATH=./dist/src node ./dist/src/index.js",
+    "start:watch": "npm run build:watch & NODE_PATH=./dist/src nodemon ./dist/src/index.js",
     "build": "tsc -p . --outDir ./dist",
     "build:watch": "npm run build -- --watch",
     "gcp-build": "npm run build",
@@ -26,23 +27,21 @@
   },
   "homepage": "https://github.com/matheusmr13/microfrontend-marketplace#readme",
   "dependencies": {
-    "@google-cloud/datastore": "^5.1.0",
-    "@google-cloud/tasks": "^1.9.0",
     "@octokit/rest": "^17.6.0",
     "@slack/web-api": "^5.9.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.4",
-    "@types/jsonwebtoken": "^8.3.9",
+    "@types/node": "^14.0.6",
     "@types/uuid": "^7.0.2",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "dayjs": "^1.8.24",
     "express": "^4.17.1",
     "firebase-admin": "^8.12.1",
-    "jsonwebtoken": "^8.5.1",
-    "npm-api": "^1.0.0",
     "octokat": "^0.10.0",
-    "ts-datastore-orm": "^0.2.2",
+    "pg": "^8.2.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.25",
     "typescript": "^3.8.3",
     "uuid": "^7.0.3"
   },
