--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,31 +3,11 @@
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "folders": [],
-  "settings": {},
+  "eslint.workingDirectories": [{ "directory": "my-nest-project", "changeProcessCWD": true }],
   "editor.formatOnSave": true,
   "editor.useTabStops": false,
   "prettier.printWidth": 120,
   "prettier.singleQuote": true,
   "editor.detectIndentation": false,
-  "editor.tabSize": 2,
-  "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#ab307e",
-    "activityBar.activeBorder": "#25320e",
-    "activityBar.background": "#ab307e",
-    "activityBar.foreground": "#e7e7e7",
-    "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#25320e",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#832561",
-    "statusBar.border": "#832561",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#ab307e",
-    "titleBar.activeBackground": "#832561",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.border": "#832561",
-    "titleBar.inactiveBackground": "#83256199",
-    "titleBar.inactiveForeground": "#e7e7e799"
-  },
-  "peacock.color": "#832561"
+  "editor.tabSize": 2
 }
