--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -3,7 +3,12 @@
     "outDir": "dist",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
+    "lib": [
+      "es6",
+      "dom",
+      "es2016",
+      "es2017"
+    ],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
@@ -19,9 +24,17 @@
     "noEmit": true,
     "noImplicitAny": false
   },
-  "baseUrl": "./src" /* Base directory to resolve non-absolute module names. */,
+  "baseUrl": "./src",
   "paths": {
-    "src/*": ["src/*"]
+    "src/*": [
+      "src/*"
+    ]
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
+  "include": [
+    "src"
+  ]
 }
